# kanren

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  LICENSE.txt  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml
.github/workflows/: pypi.yml  tests.yml
doc/: basic.md  graphs.md
examples/: account.py  commutative.py  corleone.py  prime.py  states.py  type_inference.py  user_classes.py  zebra-puzzle.py
kanren/: __init__.py  _version.py  arith.py  assoccomm.py  condp.py  constraints.py  core.py  facts.py  goals.py  graph.py  term.py  util.py
tests/: test_arith.py  test_assoccomm.py  test_condp.py  test_constraints.py  test_core.py  test_facts.py  test_goals.py  test_graph.py  test_sudoku.py  test_term.py  test_util.py  utils.py
